--- a/package.json
+++ b/package.json
@@ -31,14 +31,19 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@testing-library/jest-dom": "^6.6.4",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "jotai": "^2.12.5",
+    "jest": "^30.0.5",
     "lucide-react": "^0.526.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "ts-jest": "^29.4.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
@@ -49,6 +54,8 @@
     "autoprefixer": "^10.4.21",
     "electron": "^37.2.4",
     "electron-vite": "^4.0.0",
+    "jest-environment-jsdom": "^30.0.5",
+    "jotai": "^2.12.5",
     "postcss": "^8.5.6",
     "prisma": "^6.12.0",
     "tailwindcss": "^4.1.11",
