--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "dev": "electron-vite dev",
     "build": "electron-vite build",
     "preview": "electron-vite preview",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "db:init": "node prisma/init.js",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
@@ -31,19 +34,14 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@testing-library/jest-dom": "^6.6.4",
-    "@testing-library/react": "^16.3.0",
-    "@types/jest": "^30.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "jest": "^30.0.5",
+    "jotai": "^2.12.5",
     "lucide-react": "^0.526.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7",
-    "ts-jest": "^29.4.0"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
@@ -54,12 +52,10 @@
     "autoprefixer": "^10.4.21",
     "electron": "^37.2.4",
     "electron-vite": "^4.0.0",
-    "jest-environment-jsdom": "^30.0.5",
-    "jotai": "^2.12.5",
     "postcss": "^8.5.6",
     "prisma": "^6.12.0",
     "tailwindcss": "^4.1.11",
-    "tsx": "^4.20.3",
+    "tsx": "^4.7.0",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5.8.3"
   }
